# eurlex2lexparency

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py  ship.sh
eurlex2lexparency/: etl.py  etl_manager.py
eurlex2lexparency/celex_manager/: celex.py  doQuery_envelope_template.xml  eurlex.py  exec.py  get_missed.py  legislation_getter.py  model.py  reference_sanitizer.py  update_in_force.py
eurlex2lexparency/celex_manager/sparql_templates/: act.sparql  act_consolidates.sparql  celex_in_force.sparql  celexes_inter_year.sparql  changes_year.sparql  cons_celex_lang.sparql  consleg.sparql  corr_celex_lang.sparql  corrigenda.sparql  deforce_repealed.sparql  in_force_for.sparql  missed_consolidates.sparql  recent_corrigenda_per_type.sparql
eurlex2lexparency/celex_manager/tests/: test_celex.py  test_full_month.py
eurlex2lexparency/extraction/: __init__.py  generic.py
eurlex2lexparency/extraction/full_bodies/: formex.py  html.py  pdf.py
eurlex2lexparency/extraction/meta_data/: cdm_data.py  eli_data.py  graph_data.py  handler.py  language_format.py  load_op_resource_authority.py  short_titles.py  title_parsing.py  treaties.py
eurlex2lexparency/transformation/: __init__.py  conductor.py  config.py  special_treatments.py
eurlex2lexparency/transformation/formex/: article.py  document.py  formula.py  list.py  quote.py  table.py  toc.py
eurlex2lexparency/transformation/generic/: article.py  definitions.py  document.py  test.py
eurlex2lexparency/utils/: eurlex_request_lock.py  generics.py  sparql_kraken.py  xtml.py
(+75 files in other folders)
