[tool.poetry]
name = "eurlex2lexparency"
version = "1.3"
description = "Transforming documents from eurlex (formex, html) to lexparency structure."
authors = ["martinheimsoth <martinheimsoth@gmx.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
